# Meta-env

./: .gitignore  BLOG.md  CLAUDE.md  EXECUTE.md  LICENSE  README.md  SUBMISSION.md  TRAINING_IMPROVEMENTS_REPORT.md  pre_hf_validate.py  pytest.ini  rollout_debug.jsonl  setup_and_validate.py  starter_case_generator.py  validate_components.py
.claude/agents/: env-builder.md  scribe.md  trainer.md
assets/: heldout_eval.jsonl  heldout_eval_summary.csv  heldout_eval_summary.json
assets/demo/: blog_draft.md  demo_case.md  video_script.md
assets/diagnostics/: rollout_debug.jsonl
assets/trained_eval/: trained_eval_rows.csv  trained_eval_rows.jsonl  trained_eval_summary.json  (+1 more)
counsel_env/: .dockerignore  .gitignore  BENCHMARKS.md  DEMO_SCRIPT.md  EVAL150_STATUS.md  README.md  RUN3_STATUS.md  RUN3_TRAINING_PLAN.md  RUN4B_STATUS.md  TRAINING_PROOF.md  __init__.py  client.py  evaluation.py  models.py  openenv.yaml  pyproject.toml
counsel_env/notebooks/: train_counsel.ipynb  train_counsel_run4b.ipynb
counsel_env/scripts/: evaluate_trained_checkpoint_job.py  run_grpo_training_job.py  run_qlora_sft_training_job.py  run_sft_grpo_training_job.py
counsel_env/server/: Dockerfile  __init__.py  app.py  case_generator.py  counsel_env_environment.py  counsel_environment.py  demo.py  diagnostics.py  requirements.txt  rubrics.py  witness.py
counsel_env/tests/: test_smoke.py
docs/: SUBMISSION.md  TRAINING_IMPROVEMENTS_REPORT.md
scripts/: make_submission_plots.py  pre_hf_validate.py  run_local_eval.py  run_pre_hf.py  setup_and_validate.py  validate_components.py
(+21 files in other folders)
